// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|stories/StoriesPanel default 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel storiesHierarchies exists but is empty 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel when open on mobile device 1`] = `
<div
  class="css-nk32ej"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots UI|stories/StoriesPanel with storiesHierarchies prop 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-ypfoxr"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    />
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-79elbk"
  >
    <input
      class="css-1yhj4t5"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
  <div
    class="css-7w6khc"
  >
    <ul
      class="css-h3ek8a"
    >
      <li
        class="css-79elbk"
      >
        <span>
          <ul
            class="css-vq3qyb"
          >
            <li
              class="css-79elbk"
            >
              <div
                data-name="kk"
                role="menuitem"
                style="cursor:pointer;position:relative;overflow:hidden;padding:0px 5px;display:block;z-index:1"
                tabindex="0"
              >
                <div>
                  <div
                    style="position:relative;display:inline-block;vertical-align:top;margin-left:-5px;height:24px;width:24px;transform-origin:50% 11px"
                  >
                    <div
                      style="position:absolute;top:50%;left:50%;margin:-6px 0 0 -5px"
                    >
                      <svg
                        height="24"
                        style="vertical-align:top;fill:currentColor"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="css-1si3szf"
                  >
                    <div
                      class="css-h8sbw5"
                    >
                      kk
                    </div>
                  </div>
                </div>
              </div>
              <span>
                <ul
                  class="css-vq3qyb"
                >
                  <li
                    class="css-79elbk"
                  >
                    <a
                      class="css-oato19"
                      href="?selectedKind=kk&selectedStory=bb&full=NaN&addons=NaN&stories=NaN&panelRight=NaN"
                    >
                      <div>
                        <div
                          class="css-1si3szf"
                        >
                          <div
                            class="css-0"
                          >
                            bb
                          </div>
                        </div>
                      </div>
                    </a>
                    <span />
                  </li>
                </ul>
              </span>
            </li>
          </ul>
        </span>
      </li>
    </ul>
  </div>
</div>
`;
